--- a/projects.html
+++ b/projects.html
@@ -85,6 +85,7 @@
       <li>Stock Analysis</li>
       <li>Stock Price Predictor</li>
       <li>Workout Planner</li>
+      <li>Sleep Tracker</li>
     </ul>
   </div>
 </body>
